--- a/backend/src/main/resources/application.conf
+++ b/backend/src/main/resources/application.conf
@@ -1,3 +1,10 @@
+mongodb {
+    database = "space-mephi"
+    development {
+        host = "mongodb://localhost"
+    }
+}
+
 ktor {
     deployment {
         port = 8080
@@ -7,6 +14,7 @@ ktor {
         modules = [ ru.mephi.space.ApplicationKt.module ]
     }
 }
+
 jwt {
     domain = "http://space.mephi.ru/"
     audience = "space.mephi"
