Update openapi gen config

--- a/backend/src/main/resources/application.conf
+++ b/backend/src/main/resources/application.conf
@@ -7,3 +7,9 @@ ktor {
         modules = [ space.mephi.ApplicationKt.module ]
     }
 }
+
+openapi {
+    version = 0.0.1
+    title = space.mephi
+    description = space.mephi api documentation
+}
