--- a/backend/gradle.properties
+++ b/backend/gradle.properties
@@ -1,6 +1,7 @@
 ktorVersion=1.6.5
 kotlinVersion=1.6.10
 logbackVersion=1.2.10
+koinVersion=3.1.5
 exposedVersion=0.37.2
 hikaricpVersion=5.0.0
 postgresqlVersion=42.3.2
